--- a/src/components/song-directory/song-directory.styles.scss
+++ b/src/components/song-directory/song-directory.styles.scss
@@ -1,5 +1,5 @@
 .song-directory {
     width: 95%;
     margin: auto;
-    // overflow-y: scroll;
+    height: 100vh;
 }
