--- a/src/pages/playlist-page/playlist-page.styles.scss
+++ b/src/pages/playlist-page/playlist-page.styles.scss
@@ -6,7 +6,7 @@
     .overflow {
         overflow-y: scroll;
         margin: auto;
-        width: 80%;
+        width: 90%;
         margin-top: 30px;
         &::-webkit-scrollbar {
             width: 11px;
